# QtSmartHome

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Main.qml  README.md  conanfile.py  example.json  exampleConfig.json  exampleTransmit.json  main.cpp
common/: ColorStyle.qml  Common.qml  QtSmartHomeGlobal.h
inc/: CommunManager.h  CommunMessage.h  DeviceInfo.h  DeviceManager.h  ProtocolControl.h  SocketServer.h  VariableInfo.h
src/: CommunManager.cpp  DeviceInfo.cpp  DeviceManager.cpp  ProtocolControl.cpp
ui/: AddView.qml  BaseView.qml  DeviceApp.qml  DeviceView.qml  MainView.qml  Notification.qml  SettingView.qml  SideBar.qml  SideBarButton.qml  SideBarContent.qml  TopBar.qml  ViewRowItem.qml
